--- a/.github/workflows/mirror.yaml
+++ b/.github/workflows/mirror.yaml
@@ -27,25 +27,25 @@ jobs:
           gh --version
           echo "${{ secrets.TOKEN_GITHUB }}" | gh auth login --with-token
           gh auth status
-
+          
       - name: List GitHub repos
         id: gh_list_repos
         run: |
           gh_repo_list=$(gh repo list -L 1000 --json name -t '{{range $i, $n := .}}{{if (gt $i 0)}},{{end}}{{$n.name}}{{end}}')
-          echo "::set-output name=gh_repo_list::${gh_repo_list}"
+          echo "gh_repo_list=${gh_repo_list}" >> $GITHUB_OUTPUT
 
       - name: List Gitlab repos
         id: gl_list_repos
         run: |
           gl_repo_list=$(curl -s "https://gitlab.com/api/v4/users/${{ secrets.USER_GITLAB }}/projects?private_token=${{ secrets.TOKEN_GITLAB }}&per_page=100" |  jq  -r '. | map (.name) | join(",")')
-          echo "::set-output name=gl_repo_list::${gl_repo_list}"
+          echo "gl_repo_list=${gl_repo_list}" >> $GITHUB_OUTPUT
 
       - name: List BitBucket repos
         id: bb_list_repos
         run: |
           bb_repo_list=$(curl --request GET -s -u "${{ secrets.USER_BITBUCKET }}:${{ secrets.TOKEN_BITBUCKET }}" --url "https://api.bitbucket.org/2.0/repositories/${{ secrets.USER_BITBUCKET }}?pagelen=100&fields=values.name" --header 'Accept: application/json' | jq -r '.values | map(.name) | join(",")')
-          echo "::set-output name=bb_repo_list::${bb_repo_list}"
-
+          echo "bb_repo_list=${bb_repo_list}" >> $GITHUB_OUTPUT
+        
       - name: BitBucket to GitHub
         uses: ./
         with:
