--- a/.github/workflows/mirror.yaml
+++ b/.github/workflows/mirror.yaml
@@ -117,10 +117,9 @@ jobs:
             # load functions: gitlab_update_project, gitlab_create_project, urlencode
             source /mirror-git/functions/url.sh
             source /mirror-git/functions/gitlab.sh
-
-            result=$(gitlab_update_project ${INPUT_DEST_TOKEN} $(urlencode ${INPUT_DEST_USERNAME}/${REPO_NAME}) "{\"lfs_enabled\":false}")
+            result=$(gitlab_update_project ${INPUT_DEST_TOKEN} $(urlencode ${INPUT_DEST_USERNAME}/${REPO_NAME}) "{\"lfs_enabled\":false, \"visibility\":\"private\"}") 
             if [[ "${result}" = "404" ]]; then
-              result=$(gitlab_create_project ${INPUT_DEST_TOKEN} "{\"name\":\"${REPO_NAME}\",\"lfs_enabled\":false}")
+              result=$(gitlab_create_project ${INPUT_DEST_TOKEN} "{\"name\":\"${REPO_NAME}\",\"lfs_enabled\":false, \"visibility\":\"private\"}")
               if [[ "${result}" != "201" ]]; then
                 #notify "Failed to create gitlab project ${REPO_NAME}"
                 notify "Failed to create gitlab project"
@@ -197,10 +196,9 @@ jobs:
             # load functions: gitlab_update_project, gitlab_create_project, urlencode
             source /mirror-git/functions/url.sh
             source /mirror-git/functions/gitlab.sh
-
-            result=$(gitlab_update_project ${INPUT_DEST_TOKEN} $(urlencode ${INPUT_DEST_USERNAME}/${REPO_NAME}) "{\"lfs_enabled\":false}")
-            if [[ "${result}" = "404" ]]; then
-              result=$(gitlab_create_project ${INPUT_DEST_TOKEN} "{\"name\":\"${REPO_NAME}\",\"lfs_enabled\":false}")
+            result=$(gitlab_update_project ${INPUT_DEST_TOKEN} $(urlencode ${INPUT_DEST_USERNAME}/${REPO_NAME}) "{\"lfs_enabled\":false, \"visibility\":\"private\"}") 
+            if [[ "${result}" = "404" ]]; then            
+              result=$(gitlab_create_project ${INPUT_DEST_TOKEN} "{\"name\":\"${REPO_NAME}\",\"lfs_enabled\":false, \"visibility\":\"private\"}")
               if [[ "${result}" != "201" ]]; then
                 #notify "Failed to create gitlab project ${REPO_NAME}"
                 notify "Failed to create gitlab project"
