--- a/.github/workflows/git-mirror.yaml
+++ b/.github/workflows/git-mirror.yaml
@@ -31,21 +31,21 @@ jobs:
       - name: List GitHub repos
         id: gh_list_repos
         run: |
-          gh_repo_list=$(gh repo list -L 1000 --json name -t '{{range $i, $n := .}}{{if (gt $i 0)}},{{end}}{{$n.name}}{{end}}')
+          gh_repo_list=$(gh repo list -L 1000 --json name -t '{{range $i, $n := .}}{{if (gt $i 0)}},{{end}}{{$n.name}}{{end}}' | jq -r 'split(",") | sort | join(",")')
           echo "gh_repo_list=${gh_repo_list}" >> $GITHUB_OUTPUT
           echo "GitHub repos: ${gh_repo_list}"
 
       - name: List Gitlab repos
         id: gl_list_repos
         run: |
-          gl_repo_list=$(curl -s "https://gitlab.com/api/v4/users/${{ secrets.USER_GITLAB }}/projects?private_token=${{ secrets.TOKEN_GITLAB }}&per_page=100" |  jq  -r '. | map (.name) | join(",")')
+          gl_repo_list=$(curl -s "https://gitlab.com/api/v4/users/${{ secrets.USER_GITLAB }}/projects?private_token=${{ secrets.TOKEN_GITLAB }}&per_page=100" |  jq -r '. | map (.name) | sort | join(",")')
           echo "gl_repo_list=${gl_repo_list}" >> $GITHUB_OUTPUT
           echo "GitLab repos: ${gl_repo_list}"
 
       - name: List BitBucket repos
         id: bb_list_repos
         run: |
-          bb_repo_list=$(curl --request GET -s -u "${{ secrets.USER_BITBUCKET }}:${{ secrets.TOKEN_BITBUCKET }}" --url "https://api.bitbucket.org/2.0/repositories/${{ secrets.USER_BITBUCKET }}?pagelen=100&fields=values.name" --header 'Accept: application/json' | jq -r '.values | map(.name) | join(",")')
+          bb_repo_list=$(curl --request GET -s -u "${{ secrets.USER_BITBUCKET }}:${{ secrets.TOKEN_BITBUCKET }}" --url "https://api.bitbucket.org/2.0/repositories/${{ secrets.USER_BITBUCKET }}?pagelen=100&fields=values.name" --header 'Accept: application/json' | jq -r '.values | map(.name) | sort | join(",")')
           echo "bb_repo_list=${bb_repo_list}" >> $GITHUB_OUTPUT
           echo "BitBucket repos: ${bb_repo_list}"
        
