--- a/.github/workflows/git-mirror.yaml
+++ b/.github/workflows/git-mirror.yaml
@@ -20,7 +20,7 @@ jobs:
           python -V
           pip -V
           pip install requests
-          python unprotect_branches.py ${{ secrets.USER_GITLAB }} ${{ secrets.TOKEN_GITLAB }}
+          python gitlab/unprotect_branches.py ${{ secrets.USER_GITLAB }} ${{ secrets.TOKEN_GITLAB }}
 
       - name: Login Source GitHub
         run: |
@@ -34,6 +34,7 @@ jobs:
           gh_repo_list=$(gh repo list -L 1000 --json name -t '{{range $i, $n := .}}{{if (gt $i 0)}},{{end}}{{$n.name}}{{end}}' | tr ',' '\n' | sort | paste -sd, -)
           echo "gh_repo_list=${gh_repo_list}" >> $GITHUB_OUTPUT
           echo "GitHub repos: ${gh_repo_list}"
+          echo "Number of repos: $(echo $gh_repo_list | tr ',' '\n' | wc -l)"
 
       - name: List Gitlab repos
         id: gl_list_repos
@@ -41,6 +42,7 @@ jobs:
           gl_repo_list=$(curl -s "https://gitlab.com/api/v4/users/${{ secrets.USER_GITLAB }}/projects?private_token=${{ secrets.TOKEN_GITLAB }}&per_page=100" |  jq -r '. | map (.name) | sort | join(",")')
           echo "gl_repo_list=${gl_repo_list}" >> $GITHUB_OUTPUT
           echo "GitLab repos: ${gl_repo_list}"
+          echo "Number of repos: $(echo $gh_repo_list | tr ',' '\n' | wc -l)"
 
       - name: List BitBucket repos
         id: bb_list_repos
@@ -48,6 +50,7 @@ jobs:
           bb_repo_list=$(curl --request GET -s -u "${{ secrets.USER_BITBUCKET }}:${{ secrets.TOKEN_BITBUCKET }}" --url "https://api.bitbucket.org/2.0/repositories/${{ secrets.USER_BITBUCKET }}?pagelen=100&fields=values.name" --header 'Accept: application/json' | jq -r '.values | map(.name) | sort | join(",")')
           echo "bb_repo_list=${bb_repo_list}" >> $GITHUB_OUTPUT
           echo "BitBucket repos: ${bb_repo_list}"
+          echo "Number of repos: $(echo $gh_repo_list | tr ',' '\n' | wc -l)"
        
       - name: BitBucket to GitHub
         uses: ./
