--- a/.github/workflows/git-mirror.yaml
+++ b/.github/workflows/git-mirror.yaml
@@ -8,6 +8,13 @@ on:
 jobs:
   mirror:
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false  # Do not cancel other attempts if one fails
+      matrix:
+        retry: [1, 2, 3]  # This creates 3 runs of the job in parallel, but you're using it for retries
+      max-tries: 3  # The job will retry up to 3 times if a step fails
+
     steps:
 
       - uses: actions/checkout@v2
@@ -15,6 +22,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.11.0"
+
       - name: Unprotect branches
         run: |
           python -V
